creating a link and rejecting a share works

--- a/clients/android/app/src/main/res/layout/fragment_create_link.xml
+++ b/clients/android/app/src/main/res/layout/fragment_create_link.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -14,14 +15,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-        app:subtitle="Link destination"
-        app:title="smail" />
+        app:subtitle="@string/link_destination" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/create_link_files"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintTop_toBottomOf="@+id/create_link_toolbar" />
 
     <LinearLayout
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceSubtitle1"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/create_link_file_for"/>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -73,14 +73,14 @@
             android:gravity="end">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/create_link_create"
+                android:id="@+id/create_link_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/Widget.Material3.Button.TextButton"
                 android:text="@string/cancel" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/create_link_cancel"
+                android:id="@+id/create_link_create"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/Widget.Material3.Button.TextButton"
