--- a/clients/android/app/src/main/res/layout/fragment_shared_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_shared_files.xml
@@ -33,10 +33,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/shared_files"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:minWidth="700dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
