--- a/clients/android/app/src/main/res/navigation/shared_files_navigation.xml
+++ b/clients/android/app/src/main/res/navigation/shared_files_navigation.xml
@@ -10,7 +10,9 @@
         android:label="SharedFilesFragment" >
         <action
             android:id="@+id/action_create_link"
-            app:destination="@id/createLinkFragment" />
+            app:destination="@id/createLinkFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/createLinkFragment"
