--- a/clients/android/app/src/main/res/layout/fragment_share_file.xml
+++ b/clients/android/app/src/main/res/layout/fragment_share_file.xml
@@ -59,8 +59,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none"
-                android:labelFor="@+id/share_file_new"
-                app:simpleItems="@array/share_mode" />
+                android:hint="@null"
+                app:simpleItems="@array/share_mode"
+                android:freezesText="false"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
