--- a/clients/android/app/src/main/res/values/themes.xml
+++ b/clients/android/app/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
         <item name="colorError">@color/md_theme_error</item>
 
         <item name="windowActionModeOverlay">true</item>
-        <item name="android:statusBarColor" tools:targetApi="23">@color/transparent</item>
+        <item name="android:statusBarColor" tools:targetApi="23">?attr/colorSurface</item>
         <item name="android:windowLightStatusBar" tools:targetApi="23">?isLightTheme</item>
         <item name="android:windowTranslucentNavigation">true</item>
 
