--- a/clients/android/app/src/main/res/menu/menu_files_list_drawer.xml
+++ b/clients/android/app/src/main/res/menu/menu_files_list_drawer.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menu_files_list_sharing"
-        android:title="@string/pending_shared"
+        android:title="@string/pending_shares"
         android:icon="@drawable/ic_outline_folder_shared_24" />
 
     <item
