--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -19,4 +19,6 @@
   <color name="md_theme_error">@color/md_theme_dark_error</color>
   <color name="md_theme_inverseOnSurface">@color/md_theme_dark_inverseOnSurface</color>
   <color name="md_theme_outline">@color/md_theme_dark_outline</color>
+
+  <color name="md_theme_progressWarning">@color/md_theme_dark_progressWarning</color>
 </resources>
