--- a/clients/android/app/src/main/res/values/colors.xml
+++ b/clients/android/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
   <color name="md_theme_error">@color/md_theme_light_error</color>
   <color name="md_theme_inverseOnSurface">@color/md_theme_light_inverseOnSurface</color>
   <color name="md_theme_outline">@color/md_theme_light_outline</color>
+
+  <color name="md_theme_progressWarning">@color/md_theme_light_progressWarning</color>
 </resources>
