--- a/clients/android/app/src/main/res/values/reg-colors.xml
+++ b/clients/android/app/src/main/res/values/reg-colors.xml
@@ -16,6 +16,7 @@
     <color name="md_theme_light_outline">#74777F</color>
     <color name="md_theme_light_inverseOnSurface">#F2F0F4</color>
     <color name="md_theme_light_inversePrimary">#ACC7FF</color>
+    <color name="md_theme_light_progressWarning">#FDD835</color>
 
 <!--    <color name="md_theme_light_errorContainer">#FFDAD6</color>-->
 <!--    <color name="md_theme_light_onError">#FFFFFF</color>-->
@@ -47,8 +48,9 @@
     <color name="md_theme_dark_outline">#8E9099</color>
     <color name="md_theme_dark_inverseOnSurface">#1B1B1F</color>
     <color name="md_theme_dark_inversePrimary">#2F5DA8</color>
+    <color name="md_theme_dark_progressWarning">#FDD835</color>
 
-<!--    <color name="md_theme_dark_errorContainer">#93000A</color>-->
+    <!--    <color name="md_theme_dark_errorContainer">#93000A</color>-->
 <!--    <color name="md_theme_dark_onError">#690005</color>-->
 <!--    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>-->
 <!--    <color name="md_theme_dark_background">#1B1B1F</color>-->
