--- a/clients/android/app/src/main/res/layout/activity_upgrade_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_upgrade_account.xml
@@ -8,146 +8,155 @@
     android:padding="25dp"
     android:layout_marginTop="20dp">
 
-    <ImageView
-        android:id="@+id/exit_billing"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="end"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="15dp"
-        android:contentDescription="@string/exit"
-        android:src="@drawable/exit"
-        android:background="?android:selectableItemBackgroundBorderless" />
-
-    <com.google.android.material.textview.MaterialTextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/choose_your_plan"
-        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-        android:paddingTop="10dp"
-        android:paddingBottom="40dp"/>
+        android:minWidth="550dp"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/upgrade_account_tier_free"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:checkable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:strokeWidth="1dp">
+        <ImageView
+            android:id="@+id/exit_billing"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="15dp"
+            android:contentDescription="@string/exit"
+            android:src="@drawable/ic_outline_clear_24"
+            android:background="?android:selectableItemBackgroundBorderless" />
 
-        <LinearLayout
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/choose_your_plan"
+            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+            android:paddingTop="10dp"
+            android:paddingBottom="40dp"/>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/upgrade_account_tier_free"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:orientation="vertical">
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/free_tier_current"
-                android:textColor="?attr/colorPrimary"
-                android:textStyle="bold"
-                style="@style/TextAppearance.Material3.TitleMedium"/>
+            android:layout_height="120dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:checkable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:strokeWidth="1dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginVertical="10dp"  >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:orientation="vertical">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/one_mb"
+                    android:text="@string/free_tier_current"
+                    android:textColor="?attr/colorPrimary"
                     android:textStyle="bold"
-                    android:paddingEnd="30dp"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-                    tools:ignore="RtlSymmetry" />
+                    style="@style/TextAppearance.Material3.TitleMedium"/>
 
-                <com.google.android.material.textview.MaterialTextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/premium_space"
-                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
+                    android:orientation="horizontal"
+                    android:layout_marginVertical="10dp"  >
 
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/one_mb"
+                        android:textStyle="bold"
+                        android:paddingEnd="30dp"
+                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                        tools:ignore="RtlSymmetry" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/premium_space"
+                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
+
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
 
-    </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/upgrade_account_tier_premium_monthly"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:checkable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:strokeWidth="1dp"
-        android:layout_marginVertical="30dp">
-
-        <LinearLayout
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/upgrade_account_tier_premium_monthly"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:orientation="vertical">
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/monthly_plan"
-                style="@style/TextAppearance.Material3.TitleMedium"
-                android:textColor="?attr/colorPrimary"
-                android:textStyle="bold"/>
+            android:layout_height="120dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:checkable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:strokeWidth="1dp"
+            android:layout_marginVertical="30dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginVertical="10dp"  >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:orientation="vertical">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/premium_gb"
-                    android:textStyle="bold"
-                    android:paddingEnd="30dp"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-                    tools:ignore="RtlSymmetry" />
+                    android:text="@string/monthly_plan"
+                    style="@style/TextAppearance.Material3.TitleMedium"
+                    android:textColor="?attr/colorPrimary"
+                    android:textStyle="bold"/>
 
-                <com.google.android.material.textview.MaterialTextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/premium_space"
-                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
+                    android:orientation="horizontal"
+                    android:layout_marginVertical="10dp"  >
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/premium_gb"
+                        android:textStyle="bold"
+                        android:paddingEnd="30dp"
+                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                        tools:ignore="RtlSymmetry" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/premium_space"
+                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"  >
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/premium_price"
+                        android:textStyle="bold"
+                        android:paddingEnd="5dp"
+                        tools:ignore="RtlSymmetry" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/per_month" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"  >
+        </com.google.android.material.card.MaterialCardView>
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/premium_price"
-                    android:textStyle="bold"
-                    android:paddingEnd="5dp"
-                    tools:ignore="RtlSymmetry" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/per_month" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -158,8 +167,9 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/subscribe_to_plan"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="200dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginVertical="20dp"
             android:layout_marginHorizontal="40dp"
