--- a/clients/android/app/src/main/res/layout/fragment_files_list.xml
+++ b/clients/android/app/src/main/res/layout/fragment_files_list.xml
@@ -101,6 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            android:translationZ="-5dp"
             app:sdExpansionMode="top"
             app:sdMainFabAnimationRotateAngle="90"
             app:sdMainFabClosedBackgroundColor="?attr/colorPrimary"
