--- a/clients/android/app/src/main/res/menu/menu_files_list_drawer.xml
+++ b/clients/android/app/src/main/res/menu/menu_files_list_drawer.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_files_list_sharing"
+        android:title="@string/pending_shares"
+        android:icon="@drawable/ic_outline_folder_shared_24" />
+
+    <item
         android:id="@+id/menu_files_list_settings"
         android:title="@string/settings_title"
         android:icon="@drawable/ic_outline_settings_24" />
