--- a/clients/android/app/src/main/res/menu/menu_files_list_selected.xml
+++ b/clients/android/app/src/main/res/menu/menu_files_list_selected.xml
@@ -16,13 +16,6 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/menu_list_files_delete"
-        android:icon="@drawable/ic_outline_delete_24"
-        android:orderInCategory="4"
-        android:title="@string/menu_list_files_delete"
-        app:showAsAction="ifRoom" />
-
-    <item
         android:id="@+id/menu_list_files_move"
         android:icon="@drawable/ic_baseline_content_cut_24"
         android:orderInCategory="3"
@@ -30,9 +23,23 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/menu_list_files_share"
+        android:id="@+id/menu_list_files_delete"
+        android:icon="@drawable/ic_outline_delete_24"
+        android:orderInCategory="4"
+        android:title="@string/menu_list_files_delete"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menu_list_files_export"
         android:icon="@drawable/ic_baseline_share_24"
         android:orderInCategory="5"
+        android:title="@string/export"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menu_list_files_share"
+        android:icon="@drawable/ic_outline_folder_shared_24"
+        android:orderInCategory="6"
         android:title="@string/menu_list_files_share"
         app:showAsAction="ifRoom" />
 </menu>
