--- a/clients/android/app/src/main/res/layout/chip_share.xml
+++ b/clients/android/app/src/main/res/layout/chip_share.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.chip.Chip
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Widget.Material3.Chip.Input"
+    style="@style/Widget.Material3.Chip.Assist"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:closeIconEnabled="true" />
+    />
