--- a/clients/android/app/src/main/res/layout-land/fragment_share_file.xml
+++ b/clients/android/app/src/main/res/layout-land/fragment_share_file.xml
@@ -74,7 +74,8 @@
             app:layout_constraintBottom_toBottomOf="@+id/share_file_new"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/share_file_new"
-            app:layout_constraintTop_toTopOf="@+id/share_file_new" />
+            app:layout_constraintTop_toTopOf="@+id/share_file_new"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
